--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
     <depends>com.intellij.modules.java</depends>
     <depends>org.jetbrains.plugins.terminal</depends>
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="Rikki Agent" anchor="right" factoryClass="com.zzf.codeagent.idea.ChatToolWindowFactory"/>
-        <notificationGroup id="Rikki Agent" displayType="LOG_ONLY"/>
+        <toolWindow id="RIKKI" anchor="right" factoryClass="com.zzf.codeagent.idea.ChatToolWindowFactory"/>
+        <notificationGroup id="RIKKI" displayType="LOG_ONLY"/>
     </extensions>
 </idea-plugin>
