--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -36,6 +36,7 @@
             instance="com.zzf.rikki.idea.settings.RikkiSettingsConfigurable"
             id="com.zzf.rikki.idea.settings.RikkiSettingsConfigurable"
             displayName="Rikki Code Agent"/>
+        <projectService serviceImplementation="com.zzf.rikki.idea.IdeBridgeServer"/>
         <toolWindow id="RIKKI" anchor="right" factoryClass="com.zzf.rikki.idea.ChatToolWindowFactory"/>
         <notificationGroup id="RIKKI" displayType="LOG_ONLY"/>
         <inline.completion.provider
