fix: rethrow CancellationException in completion provider + add Alt+\ trigger shortcut - Critical coroutine bug: catch (ce: CancellationException) { throw ce } before the   generic catch block prevents JobCancellationException from being swallowed, which   was causing emit() to silently fail even when LLM tokens had been received - Add RikkiTriggerCompletionAction (Alt+\) for on-demand inline completion trigger - Reduce max_tokens 256→100 and PREFIX_LIMIT 4000→2000 for faster LLM responses

--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -42,4 +42,13 @@
             implementation="com.zzf.rikki.idea.completion.RikkiInlineCompletionProvider"
             order="last"/>
     </extensions>
+
+    <actions>
+        <action id="Rikki.TriggerCompletion"
+                class="com.zzf.rikki.idea.completion.RikkiTriggerCompletionAction"
+                text="Trigger Rikki AI Completion"
+                description="Manually trigger Rikki inline AI completion at cursor">
+            <keyboard-shortcut keymap="$default" first-keystroke="alt BACK_SLASH"/>
+        </action>
+    </actions>
 </idea-plugin>
