--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -59,7 +59,9 @@
             id="com.zzf.rikki.idea.settings.RikkiSettingsConfigurable"
             displayName="Rikki Code Agent"/>
         <projectService serviceImplementation="com.zzf.rikki.idea.IdeBridgeServer"/>
-        <toolWindow id="RIKKI" anchor="right" factoryClass="com.zzf.rikki.idea.ChatToolWindowFactory"/>
+        <toolWindow id="Rikki" anchor="right"
+                    icon="/icons/toolWindowRikki.svg"
+                    factoryClass="com.zzf.rikki.idea.ChatToolWindowFactory"/>
         <inline.completion.provider
             implementation="com.zzf.rikki.idea.completion.RikkiInlineCompletionProvider"
             order="last"/>
